--- a/integrations/reloadablefile/taskpanel.ui
+++ b/integrations/reloadablefile/taskpanel.ui
@@ -15,34 +15,51 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="2" column="1" colspan="2">
+      <widget class="QLineEdit" name="lineEditUrl"/>
+     </item>
+     <item row="1" column="1">
       <widget class="QLineEdit" name="lineEditFilePath"/>
      </item>
-     <item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="labelFile">
+       <property name="text">
+        <string>File:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="labelUrl">
+       <property name="text">
+        <string>URL:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
       <widget class="QPushButton" name="buttonBrowse">
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QToolButton" name="buttonRefresh">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../../../../../FCD/FreeCAD/src/Gui/Icons/resource.qrc">
-         <normaloff>:/icons/view-refresh.svg</normaloff>:/icons/view-refresh.svg</iconset>
-       </property>
-      </widget>
-     </item>
     </layout>
+   </item>
+   <item alignment="Qt::AlignmentFlag::AlignRight">
+    <widget class="QToolButton" name="buttonRefresh">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>:/icons/view-refresh.svg</normaloff>:/icons/view-refresh.svg</iconset>
+     </property>
+    </widget>
    </item>
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Orientation::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
